--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -12,6 +14,9 @@ body {
 
 .texto-destaque {
     background-color: #FFDF1B;
+    width: 100px;
+    text-align: center;
+    padding: 10px 10px;
 }
 
 .apresentacao {
@@ -28,17 +33,36 @@ body {
 
 .apresentacao__coteudo__titulo {
     font-size: 50px;
-    font-family: inter;
+    font-family: "Inter", sans-serif;
 }
 
 .apresentacao__coteudo__subtitulo {
     font-size: 45px;
     padding-top: 2%;
+    font-family: "Inter", sans-serif;
 }
 
 .apresentacao__coteudo__texto {
     font-size: 35px;
     padding-top: 6%;
+}
+
+.apresentacao__links {
+    display: flex;
+    justify-content: space-between;
+}
+
+.apresentacao__links__link {
+    background-color: #FFDF1B;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    text-align: center;
+    font-size: 24px;
+    padding: 15px 0;
+    text-decoration: none;
+}
 
 img {
     max-width: 200px
