--- a/style.css
+++ b/style.css
@@ -33,37 +33,46 @@ body {
 
 .apresentacao__coteudo__titulo {
     font-size: 50px;
+    margin-top: 100px;
     font-family: "Inter", sans-serif;
+    text-align: center;
 }
 
 .apresentacao__coteudo__subtitulo {
     font-size: 45px;
     padding-top: 2%;
     font-family: "Inter", sans-serif;
+    text-align: center;
 }
 
 .apresentacao__coteudo__texto {
     font-size: 35px;
-    padding-top: 6%;
+    margin-top: 15px;
+    padding-top: 7%;
+    text-align: center;
 }
 
 .apresentacao__links {
     display: flex;
-    justify-content: space-between;
+    gap: 30px;
+    margin-top: 50px;
+    margin-left: 80px;
+    align-items: center;
 }
 
 .apresentacao__links__link {
-    background-color: #FFDF1B;
+    background-color: #000000;
+    color: #F5E6E8;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 150px;
+    width: 300px;
     text-align: center;
     font-size: 24px;
-    padding: 15px 0;
+    padding: 20px 0;
     text-decoration: none;
 }
 
 img {
-    max-width: 200px
+    max-width: 500px
 }
