--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
     background-color: #000000;
     color: #F5E6E8;
     display: flex;
+    border-radius: 10px;
     justify-content: center;
     align-items: center;
     width: 300px;
