--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
     color: #FFF0F2;
 }
 .apresentacao__links__link:hover {
-    background-color: #FE5E5E;
+    background-color: #FE5E5ES;
 }
 
 img {
