--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
 }
 
 body {
-    background-color: #000000;
+    /* height: 100vh;   */
     box-sizing: border-box;
+    background-color: #000000;
     color: #FFF0F2;
-    height: 100vh;  
 }
 
 .texto-destaque {
@@ -20,7 +20,7 @@ body {
 }
 
 .apresentacao {
-    margin: 3%;
+    padding: 15% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -81,4 +81,14 @@ body {
 
 img {
     max-width: 500px
+}
+
+.rodape {
+    color: #000000;
+    background-color: #22D4FD;
+    padding: 24px;
+    text-align: center;
+    font-family: monospace;
+    font-size: 15px;
+    font-weight: 400;
 }
