--- a/styles/style.css
+++ b/styles/style.css
@@ -31,11 +31,10 @@ body {
 }
 
 .apresentacao {
-    padding: 15% 15%;
+    padding: 0% 0% 6% 0%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 3%;
 }
 
 .texto-destaque {
@@ -65,9 +64,9 @@ body {
 }
 
 .apresentacao__coteudo__texto {
-    font-size: 35px;
+    font-size: 30px;
     margin-top: 15px;
-    padding-top: 5%;
+    padding: 0% 15% 0% 15% ;
     text-align: center;
 }
 
