--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+:root {
+    --cor-primaria: #000000;
+    --cor-secundaria: #FFF0F2;
+    --cor-terciaria: #22D4FD;
+    --cor-hover: #1f1c20;
+
+    --font-principal: monospace;
+    --font-secundaria: "Inter", sans-serif;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,8 +18,8 @@
 body {
     /* height: 100vh;   */
     box-sizing: border-box;
-    background-color: #000000;
-    color: #FFF0F2;
+    background-color: var(--cor-primaria);
+    color: var(--cor-secundaria);
 }
 
 .cabecalho {
@@ -23,53 +33,55 @@ body {
 }
 
 .cabecalho__menu__link {
-    font-family: monospace;
-    font-size: 20px;
+    font-family: var(--font-principal);
+    font-size: 1.25rem;
     font-weight: 600;
-    color: #22D4FD;
+    color: var(--cor-terciaria);
     text-decoration: none;
 }
 
 .apresentacao {
+    margin: 4% 0% 4% 0%;
     padding: 1% 5% 1% 5%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 
 .texto-destaque {
-    background-color: #22D4FD;
+    background-color: var(--cor-terciaria);
     width: 100px;
     text-align: center;
     padding: 10px 10px;
 }
 
 .apresentacao__conteudo {
-    width: 1018px;
+    width: 50%;
     height: 350;
 }
 
 .apresentacao__coteudo__titulo {
-    font-size: 40px;
+    font-size: 2.5rem;
     margin-top: 0px;
-    font-family: "Inter", sans-serif;
+    font-family: var(--font-secundaria);
     text-align: center;
 }
 
 .apresentacao__links__subtitulo {
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 .apresentacao__coteudo__subtitulo {
-    font-size: 40px;
+    font-size: 2.5rem;
     padding-top: 2%;
-    font-family: "Inter", sans-serif;
+    font-family: var(--font-secundaria);
     text-align: center;
 }
 
 .apresentacao__coteudo__texto {
-    font-family: monospace;
-    font-size: 20px;
+    font-family: var(--font-principal);
+    font-size: 1.25rem;
     margin-top: 15px;
     padding: 2% 15% 0% 15% ;
     text-align: center;
@@ -88,40 +100,41 @@ body {
     display: flex; 
     justify-content: center;
     gap: 1px;
-    border: 2px solid #22D4FD;
-    width: 250px;
+    border: 2px solid var(--cor-terciaria);
+    width: 50%;
     text-align: center;
     border-radius: 10px;
-    font-size: 24px;
+    font-size: 1.5rem;
     padding: 1px 0px 0px 0px;
     text-decoration: none;
-    color: #FFF0F2;
+    color: var(--cor-secundaria);
     align-items: center;
 }
 
 .apresentacao__links__link__subtitulo {
-    font-family: monospace;
+    font-family: var(--font-principal);
 }
 
 .apresentacao__links__link:hover {
-    background-color: #1f1c20;
+    background-color: var(--cor-hover);
 }
 
-img {
-    max-width: 500px;
-}
-
-img {
-    margin: 5%;
-    margin-right: 9%;
+.imagem {
+    width: 40%;
 }
 
 .rodape {
-    color: #000000;
-    background-color: #22D4FD;
+    color: var(--cor-primaria);
+    background-color: var(--cor-terciaria);
     padding: 20px;
     text-align: center;
-    font-family: monospace;
-    font-size: 15px;
+    font-family: var(--font-principal);
+    font-size: 0.93rem;
     font-weight: 400;
+}
+
+@media (max-width: 1200px) {
+    .apresentacao {
+        flex-direction: column-reverse;
+    }
 }
