--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,6 @@ body {
 }
 
 .apresentacao {
-    margin: 4% 0% 4% 0%;
     padding: 1% 5% 1% 5%;
     display: flex;
     align-items: center;
@@ -120,7 +119,7 @@ body {
 }
 
 .imagem {
-    width: 40%;
+    width: 45%;
 }
 
 .rodape {
@@ -131,10 +130,25 @@ body {
     font-family: var(--font-principal);
     font-size: 0.93rem;
     font-weight: 400;
+    margin-top: 5%;
 }
 
 @media (max-width: 1200px) {
+    .cabecalho {
+        padding: 10%;
+    }
+
+    .cabecalho__menu {
+        justify-content: center;
+    }
+
     .apresentacao {
         flex-direction: column-reverse;
+        padding: 1%;
+
+    }
+
+    .apresentacao__conteudo {
+        width: auto;
     }
 }
